@@ -1,3 +1,12 @@
+2009-02-04  Matias De la Puente  <mfpuente.ar@gmail.com>
+
+	*  watraysimple/simpledocumentmanager.vala:
+	*  watraysimple/Makefile.am:
+	*  watraysimple/simpleplugin.vala:
+
+	Removed Simple.ProjectManager, DocumentManager will take care of
+	the opened files.
+
 2009-02-03  Matias De la Puente  <mfpuente.ar@gmail.com>
 
 	*  watraysimple/simpledocumentview.vala:
